# Argus

./: .gitignore  .luarc.json  README.md  argus_history.db  main.py  main_console.py  main_gui.py  main_tui.py  pyproject.toml  pyproject.toml.bak  requirements.txt  test_proto_infer.py
argus/: __init__.pyi  _common.pyi  main.py  types.pyi
argus/core/: role_manager.py  theme_manager.py
argus/pages/: about.py  disk.py  drivers.py  memory.py  network.py  overview.py  processes.py  recording.py  rules.py  scripts.py  settings.py  system.py  timemachine.py  users.py
argus/resources/: icon_manager.py
argus/themes/: dark.qss  light.qss
argus/ui/: main_window.py  sidebar.py  splash.py  topbar.py
argus/widgets/: adapter_card.py  connection_table.py  drive_card.py  driver_table.py  env_table.py  event_table.py  graph_widget.py  graph_window.py  hardware_tree.py  history_dashboard.py  info_panel.py  metric_card.py  notification_center.py  partition_table.py  permission_overlay.py  playback_controls.py  process_snapshot_table.py  process_tree.py  recording_timeline.py  services_table.py  stat_card.py  timeline_widget.py  traffic_graph.py
backend/bridges/: async_bridge.py  converters.py  sync_bridge.py
backend/core/: argus_runtime.py  driver_proxy.py  engine.py  loader.py  paths.py  python_script.py  sandbox.py
backend/interfaces/: caps.py  contexts.py  enums.py  metadata_schema.json  permissions.py  plugins.py  plugins.pyi  rules.py  (+1 more)
docs/: architecture.md  bridges.md  configuration.md  developing-drivers.md  frontend.md  scripts-lua.md  scripts-python.md  tui-guide.md
frontend/: requirements.txt
scripts/: .argus.lua  argus.lua  argus_types.lua  battery_monitor.lua  cpu_logger.py  disk_watchdog.lua  memory_logger.lua  multi_subsystem.py  network_activity.lua  process_watchdog.lua  sensor_dashboard.lua  system_summary.lua  top_process_reporter.lua  watchdog.lua
tests/: conftest.py  fake_driver.py  test_smoke.py
(+96 files in other folders)
