[project]
name = "argus"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "lupa==2.8",
    "psutil==7.2.2",
    "pydantic==2.14.0a1",
    "pydantic-settings[yaml]==2.14.1",
]

[dependency-groups]
gui = [
    "PyQt6>=6.8.0",
    "pyqtgraph>=0.13.7",
]
dev = [
    "basedpyright",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
]
