[project]
name = "argus"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "lupa==2.8",
    "psutil==7.2.2",
    "pydantic==2.14.0a1",
    "pydantic-settings[yaml]==2.14.1",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "textual>=8.2.7",
]
gui = [
    "PyQt6>=6.8.0",
    "pyqtgraph>=0.13.7",
]
[tool.basedpyright]
typeCheckingMode = "standard"
reportImportCycles = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedImport = false
reportUnusedParameter = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportAny = false
reportImplicitStringConcatenation = false
reportRedeclaration = false
reportEmptyAbstractUsage = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false

dev = [
    "basedpyright",
    "pdoc>=16.0.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
    "textual>=8.2.7",
]
